--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: 파이썬 파일 실행!!
-      run: python 'test.py
+    - name: Run Python
+      run: python test.py
